RESOLVED FIXED225003
ANGLE X11 build fixes
https://bugs.webkit.org/show_bug.cgi?id=225003
Summary ANGLE X11 build fixes
Don Olmstead
Reported 2021-04-23 15:41:43 PDT
Attachments
Patch (1.96 KB, patch)
2021-04-23 15:48 PDT, Don Olmstead
no flags
Don Olmstead
Comment 1 2021-04-23 15:48:45 PDT
Kenneth Russell
Comment 2 2021-04-23 17:56:23 PDT
Comment on attachment 426957 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=426957&action=review Seems fine. r+ > Source/WebCore/platform/graphics/angle/ANGLEHeaders.h:52 > +#if defined(None) Would it be possible to put some guard around this entire block so it only applies to X11 platforms? If not, that's OK.
Don Olmstead
Comment 3 2021-04-23 20:30:24 PDT
(In reply to Kenneth Russell from comment #2) > Comment on attachment 426957 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=426957&action=review > > Seems fine. r+ > > > Source/WebCore/platform/graphics/angle/ANGLEHeaders.h:52 > > +#if defined(None) > > Would it be possible to put some guard around this entire block so it only > applies to X11 platforms? If not, that's OK. It seemed to be dragging in X11 headers on Linux even when `angle_use_x11` and `ENABLE_X11_TARGET` were OFF.
Don Olmstead
Comment 4 2021-04-26 08:01:19 PDT
Comment on attachment 426957 [details] Patch Talked to mcatanzaro and there doesn't seem to be a good way to guard the set of checks. The other file using it also does the same unconditionally.
EWS
Comment 5 2021-04-26 08:04:49 PDT
Committed r276591 (237027@main): <https://commits.webkit.org/237027@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426957 [details].
Radar WebKit Bug Importer
Comment 6 2021-04-26 08:05:16 PDT
Note You need to log in before you can comment on or make changes to this bug.