Source/WebCore/platform/graphics/angle/ANGLEHeaders.h
@@ -47,6 +47,42 @@
 #include <ANGLE/entry_points_gles_3_0_autogen.h>
 #include <ANGLE/entry_points_gles_ext_autogen.h>
 
+// X11 headers define a bunch of macros with common terms, interfering with WebCore and WTF enum values.
+// As a workaround, we explicitly undef them here.
+#if defined(None)
+#undef None
+#endif
+#if defined(Above)
+#undef Above
+#endif
+#if defined(Below)
+#undef Below
+#endif
+#if defined(Success)
+#undef Success
+#endif
+#if defined(False)
+#undef False
+#endif
+#if defined(True)
+#undef True
+#endif
+#if defined(Bool)
+#undef Bool
+#endif
+#if defined(Always)
+#undef Always
+#endif
+#if defined(Status)
+#undef Status
+#endif
+#if defined(Continue)
+#undef Continue
+#endif
+#if defined(Region)
+#undef Region
+#endif
+
 // Note: this file can't be compiled in the same unified source file
 // as others which include the system's OpenGL headers.
 
